<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".MainActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp">

    <EditText
        android:id="@+id/title_edit_text"
        android:hint="@string/Title"
        style="@style/EditTextStyle"/>

    <EditText
        android:id="@+id/message_edit_text"
        android:hint="@string/Your_Message"
        style="@style/EditTextStyle"/>
    <CheckBox
        android:id="@+id/checkbox"
        android:text="@string/Only_Send_Title"
        style="@style/CheckBoxStyle"/>
    <Button
        android:id="@+id/send_mail_button"
        android:text="@string/Send_Mail_Button"
        style="@style/ButtonStyle"/>
    <Button
        android:id="@+id/launch_activity_button"
        android:text="@string/Launch_Activity_Button"
        style="@style/ButtonStyle"/>
    <Button
        android:id="@+id/launch_camera_button"
        android:text="@string/Launch_Camera_Button"
        style="@style/ButtonStyle"/>

</LinearLayout>
</ScrollView>